# Drone-Tracker

./: .gitignore  CMakeLists.txt  README.md
src/: context.h  detection.cpp  main.cpp
src/camera/: camera  camera.cpp  camera.h  old_main.cpp
src/detection/: detect.cpp  detect.h
src/window/: window.cpp  window.h
